[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Home.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.166295, 0.240564, 0.192993 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.470588, 0.388235, 0.172549, 1 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.321569, 0.243137, 0.0941176, 1 )

[sub_resource type="PrismMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.478431, 0.0666667, 0.0666667, 1 )
roughness_texture_channel = 4

[node name="Home" type="Spatial"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 18, 0, 0 )
script = ExtResource( 1 )

[node name="HomeArea" type="Area" parent="."]
transform = Transform( 7.0901, 0, 0, 0, 8.99404, 0, 0, 0, 3.69884, 2.96666e-06, 2.05581, 18.2092 )
collision_layer = 8
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="HomeArea"]
transform = Transform( 1, 0, 0, 0, 0.871819, 0, 0, 0, 3.15439, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Land" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 25, 13, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="HouseBody" type="MeshInstance" parent="."]
transform = Transform( 6.76424, 0, 0, 0, 4.82049, 0, 0, 0, 11.9641, 20.3904, 4.58018, 9.53049 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="HouseRoof" type="MeshInstance" parent="."]
transform = Transform( 8.16194, 0, 0, 0, 3.64425, 0, 0, 0, 13.6267, 19.9979, 12.9221, 9.17009 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="HomeArea" to="." method="_on_HomeArea_body_entered"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
